# SecondTask_BlockchainJun

./: CMakeLists.txt  README.md  main.cpp
include/: Soludtion.hpp
src/: Solution.cpp
tests/: input1.txt  output.txt
